# free_to_github

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  Version update log.md  build.rs  build_gui.bat  free_to_github_gui.exe.manifest  run.bat  run_gui_admin.bat  userGuide.md
src/: hosts.rs  lib.rs  logger.rs  main.rs  main_gui.rs  network.rs
tauri-ui/: package-lock.json  package.json
tauri-ui/src/: App.vue
tauri-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-ui/src-tauri/src/: hosts.rs  lib.rs  network.rs
tests/: integration_test.rs
