[package]
name = "free_to_github"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A local GitHub access acceleration tool without third-party servers"
license = "Apache-2.0"
repository = "https://github.com/your-username/free_to_github"

[dependencies]
eframe = "0.24"
egui = "0.24"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "wingdi"] }

[build-dependencies]
embed-resource = "2.4"
log = "0.4"

# Windows 下隐藏控制台窗口
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# Debug 模式也隐藏控制台窗口
[profile.dev]
opt-level = 0

[lib]
name = "free_to_github"
path = "src/lib.rs"

[[bin]]
name = "free_to_github_gui"
path = "src/main_gui.rs"

[[bin]]
name = "free_to_github_cli"
path = "src/main.rs"
